image extension changed / header fixed / code aligned

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 50px;
+    padding-top: 150px;
     padding-bottom: 50px;
     min-height: calc(100vh - 360px);
 }
